infra/template/30-service-frontend.yaml
apiVersion: v1
kind: Service
metadata:
  name: ${PREFIX}-frontend-svc
  namespace: ${PREFIX}
spec:
  selector:
    app: ${PREFIX}-frontend
  ports:
  - port: 80
    targetPort: 80
